--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,20 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   convex_bottom_bar: ^2.4.1
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
