--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   convex_bottom_bar: ^2.4.1
   cupertino_icons: ^0.1.3
   charts_flutter: ^0.9.0
+  flutter_signin_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
