--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   charts_flutter: ^0.9.0
   flutter_signin_button: ^1.0.0
+  json_serializable: ^3.4.0
+  flutter_rating_bar: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +52,7 @@ flutter:
     - assets/parks/1.jpg
     - assets/parks/2.jpg
     - assets/parks/3.jpg
+    - assets/places.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
